# coincidence-counter

./: .gitignore  Cargo.toml  README.md  hydraHarpLib.nix  opticspy.nix  shell.nix
coincidence_plotter/: coincidence_plotter.py  interface.py  phase_pattern_display_test.py  phase_plotter.py  zernike_generator.py
hhlib-sys/: Cargo.toml  build.rs  shell.nix  wrapper.h
hhlib-sys/src/: device.rs  lib.rs  measurement.rs  python_wrapper.rs  types.rs
rusty-counter/: Cargo.toml
rusty-counter/src/: main.rs
rusty-hhpython/: Cargo.toml
rusty-hhpython/src/: lib.rs
