[package]
name = "hhlib-sys"
version = "0.1.0"
authors = ["Max Tyler <maxastyler@gmail.com>"]
edition = "2018"

[build-dependencies]
bindgen = "0.49"

[lib]
name = "hhlib_sys"
crate-type = ["cdylib", "rlib"]

[features]
default = [ "pyo3" ]

[dependencies]
num-derive = "0.2"
num-traits = "0.2"
num = "0.2"

[dependencies.pyo3]
version = "0.7.0"
features = ["extension-module"]
optional = true